--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,6 @@
   "dependencies": [],
   "codeowners": ["@BastiOfBerlin"],
   "requirements": ["threema.gateway==4.0.0"],
+  "config_flow": true,
   "iot_class": "cloud_push"
 }
